# rss-firehose

./: .env.template  .gitignore  Dockerfile  README.md  extract.py  feed_parser.py  feed_processor.py  feeds.json  feeds.xml  justfile  main.py  mqtt_publisher.py  pyproject.toml  test_feed_processor.py
.github/workflows/: publish.yml
feed-input/: boyter_feeds.json  elly_joel_feeds.json
feed_input/: boyter_feeds.json
